--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,10 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "bip_test",
+      "name": "Dart",
+      "type": "dart",
       "request": "launch",
-      "type": "dart"
-    }
+      "program": "bin/test_web3dart.dart"
+    },
   ]
 }
